<resources>
    <string name="app_name">Example App</string>
    <string name="action_settings">Settings</string>
    <string name="favourites">Favourites</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="clientcredentials">client_credentials</string>

    <!-- Favourite Screen Strings -->
    <string name="no_favs_found">No favourites here yet</string>



    <!-- SEARCH SCREEN STRINGS -->
    <string name="origin">Origin</string>
    <string name="search_title">SÖK RESA</string>
    <string name="search_history">Sökhistorik</string>
    <string name="origin_hint">Från</string>
    <string name="destination_hint">Till</string>
    <string name="destination_search_hint">Hållplats / Adress</string>
    <string name="stoplocation_hint">Stoplocation name</string>
    <string name="content_desc_gps_btn">gpsbtn</string>
    <string name="content_desc_swap_btn">swapbtn</string>
    <string name="content_desc_expand_btn">expandbtn</string>
    <string name="content_desc_stoploc_img">Img</string>


    <!-- Trip Overview Strings -->
    <string name="trip_results">Resor</string>

</resources>
