<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/search_constraint_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="384dp"
        android:id="@+id/search_top_bg"
        android:background="@color/material_primary_dark"
        android:adjustViewBounds="false"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp"
        android:layout_height="180dp" />

    <TextView
        android:text="@string/search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/search_title_text"
        android:textAppearance="@android:style/TextAppearance.Material.SearchResult.Title"
        android:textColor="@color/material_text_icons"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/search_top_bg"
        android:layout_marginTop="24dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_gps_not_fixed_white_18dp"
        android:background="@null"
        android:id="@+id/search_gps_button"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/search_title_text"
        app:layout_constraintLeft_toLeftOf="@+id/search_title_text" />

    <EditText
        android:id="@+id/origin_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/search_gps_button"
        android:inputType="textPersonName"
        android:hint="@string/origin_hint"
        android:background="@android:color/transparent"
        android:layout_marginStart="8dp"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@color/material_text_icons"
        android:textColorHint="@color/material_text_icons"
        app:layout_constraintTop_toTopOf="@+id/search_gps_button" />

    <EditText
        android:id="@+id/desination_edt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@+id/search_dest_icon"
        android:inputType="textPersonName"
        android:hint="@string/destination_hint"
        android:layout_marginStart="8dp"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textColor="@color/material_text_icons"
        android:textColorHint="@color/material_text_icons"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="@+id/search_dest_icon" />
    <View
        android:layout_height="1dp"
        android:layout_width="240dp"
        android:background="@color/material_divider"
        android:id="@+id/search_divider"
        app:layout_constraintBottom_toTopOf="@+id/desination_edt"
        app:layout_constraintTop_toBottomOf="@+id/origin_edt"
        app:layout_constraintLeft_toLeftOf="@+id/desination_edt" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_location_on_white_18dp"
        android:contentDescription="@string/content_desc_gps_btn"
        android:id="@+id/search_dest_icon"
        app:layout_constraintTop_toBottomOf="@+id/search_gps_button"
        app:layout_constraintLeft_toLeftOf="@+id/search_gps_button"
        android:layout_marginTop="24dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_swap_vert_white_36dp"
        android:background="@null"
        android:id="@+id/search_swap_btn"
        android:contentDescription="@string/content_desc_swap_btn"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/origin_edt"
        app:layout_constraintBottom_toTopOf="@+id/desination_edt"
        app:layout_constraintLeft_toRightOf="@+id/search_divider"
        />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:srcCompat="@drawable/ic_expand_more_white_36dp"
        app:layout_constraintBottom_toBottomOf="@+id/search_top_bg"
        android:id="@+id/search_expand_btn"
        app:layout_anchorGravity="bottom|left|end"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <net.cachapa.expandablelayout.ExpandableLayout
        app:layout_constraintTop_toBottomOf="@+id/search_top_bg"
        app:layout_constraintLeft_toLeftOf="@id/search_top_bg"
        android:id="@+id/expandable_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:el_duration="300"
        app:el_expanded="false"
        app:el_translate_children="true"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/material_accent"
            android:text="Fixed height" />

    </net.cachapa.expandablelayout.ExpandableLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/search_recycler"
        android:background="@color/material_primary_light"
        app:layout_constraintTop_toBottomOf="@+id/expandable_layout"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>